Fork of aedenthorn/DiscardInventoryItem for v0.217.46+ Recycle items into lesser parts. Drag and press [Delete]. Option to not give back Coins, Magic Parts (EpicLoot), Magic Shards (EpicLoot). Option to block recycling of Consumables and Trophies.

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "RecycleItemsIntoParts",
     "version_number": "1.6.0",
     "website_url": "https://github.com/cjayride/RecycleItemsIntoParts",
-    "description": "Fork of aedenthorn/DiscardInventoryItem for v0.217.46+ Repair your gear using Coins.",
+    "description": "Fork of aedenthorn/DiscardInventoryItem for v0.217.46+ Recycle items into lesser parts. Drag and press [Delete]. Option to not give back Coins, Magic Parts (EpicLoot), Magic Shards (EpicLoot). Option to block recycling of Consumables and Trophies.",
     "dependencies": [
 		"denikson-BepInExPack_Valheim-5.4.2202"
     ]
