--- a/RecycleItemsIntoParts/RecycleItemsIntoParts.csproj
+++ b/RecycleItemsIntoParts/RecycleItemsIntoParts.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Version>1.0.0</Version>
+    <AssemblyVersion>1.6.0</AssemblyVersion>
+    <FileVersion>1.6.0</FileVersion>
   </PropertyGroup>
   <Import Project="$(SolutionDir)\valheim.targets" />
   <ItemGroup>
